--- a/assets/i18n/uk.json
+++ b/assets/i18n/uk.json
@@ -4,12 +4,12 @@
       "home": {
         "name": "Головна",
         "title": "Головна",
-        "meta-description": "Загальна іннформація про аеростати (дерижаблі, повітряні кулі, гібриди)"
+        "meta-description": "Загальна інформація про аеростати (дерижаблі, повітряні кулі, гібриди)"
       },
       "aerostats": {
         "name": "Аеростати",
         "title": "Аеростати",
-        "meta-description": "Детальна іннформація про аеростати (дерижаблі, повітряні кулі, гібриди)"
+        "meta-description": "Детальна інформація про аеростати (дерижаблі, повітряні кулі, гібриди)"
       },
       "contact": {
         "name": "Контакти",
